<resources>
    <string name="app_name">Kotlin Github User</string>
    <string name="username">username</string>
    <string name="location">location</string>
    <string name="company">company</string>
    <string name="more_details">More Details</string>
    <string name="name">name</string>
    <string name="dot">•</string>
    <string name="user_followers">0</string>
    <string name="followers">followers</string>
    <string name="user_following">0</string>
    <string name="following">following</string>
    <string name="user_repositories">0</string>
    <string name="repositories">repositories</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="followers_list">%s\'s Followers List</string>
    <string name="following_list">%s\'s Following List</string>
    <string name="email">email</string>
    <string name="url">url</string>
    <string name="language_settings">Change Language Settings</string>
    <string name="search_hint">Search Github User Here</string>
    <string name="welcome_text">Welcome to Github User App!</string>
    <string name="instruction_text">Input username on search box to run this app</string>
    <string name="user_not_found">User with name %s not found</string>
    <string name="connection_list">Connection List</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="added_favorite">User with name %s added to favorite!</string>
    <string name="deleted_favorite">User with name %s deleted from favorite</string>
    <string name="user_favorite_not_found">Oops! There are no user favorite, yet. You can add user favorite within user profile</string>
    <string name="set_notification_settings">Set Notification</string>
    <string name="learn_more_settings">Learn More on Dicoding</string>
    <string name="notification_instruction">This app will remind you to open app on 09.00 AM. You can adjust this notification by toggle button here</string>
    <string name="notification_message">See Github User App to connect with developer all around the world!</string>
    <string name="key_notification">notification</string>
</resources>