<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".GithubUserDetailActivity">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@color/yellow_700" />

                <TextView
                    android:id="@+id/tv_item_username"
                    style="@style/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_item_photo"
                    app:layout_constraintTop_toTopOf="@id/img_item_photo" />

                <View
                    android:id="@+id/horizontalRule"
                    android:layout_width="128dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="3dp"
                    android:background="@color/blue_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_item_photo"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_username" />

                <TextView
                    android:id="@+id/tv_item_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_repositories"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tv_repositories"
                    app:layout_constraintEnd_toStartOf="@+id/tv_repositories"
                    app:layout_constraintTop_toBottomOf="@id/horizontalRule"
                    app:layout_constraintBottom_toTopOf="@id/tv_repositories" />

                <TextView
                    android:id="@+id/tv_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    app:layout_constraintBottom_toBottomOf="@id/img_item_photo"
                    app:layout_constraintEnd_toStartOf="@+id/tv_followers"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_repositories" />

                <TextView
                    android:id="@+id/tv_item_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_followers"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_item_repositories"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers"
                    app:layout_constraintEnd_toStartOf="@+id/tv_followers"
                    app:layout_constraintTop_toTopOf="@id/tv_item_repositories" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    app:layout_constraintBottom_toBottomOf="@id/img_item_photo"
                    app:layout_constraintEnd_toStartOf="@id/tv_following"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/tv_repositories"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_followers" />

                <TextView
                    android:id="@+id/tv_item_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_following"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_item_followers"
                    app:layout_constraintStart_toEndOf="@+id/tv_following"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following"
                    app:layout_constraintTop_toTopOf="@id/tv_item_followers" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    app:layout_constraintBottom_toBottomOf="@id/img_item_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_following" />

                <ImageView
                    android:id="@+id/img_ic_location"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@id/tv_item_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_item_location"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_item_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toEndOf="@+id/img_ic_location"
                    app:layout_constraintTop_toBottomOf="@id/img_item_photo" />

                <ImageView
                    android:id="@+id/img_ic_office"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_office"
                    app:layout_constraintBottom_toBottomOf="@id/tv_item_company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_item_company"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_item_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/company"
                    app:layout_constraintStart_toEndOf="@id/img_ic_office"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_location" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="?attr/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@id/view_pager"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_company"
                    app:tabTextColor="@android:color/white" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tabs" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>