<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:paddingTop="4dp"
    android:paddingBottom="2dp"
    android:paddingHorizontal="8dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@id/tv_item_username"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_url"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_gravity="center_vertical"
            tools:src="@color/yellow_700" />

        <TextView
            android:id="@+id/tv_dot_left"
            android:textColor="@color/blue_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/tv_item_username"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_username"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            android:text="@string/dot" />

        <TextView
            android:id="@+id/tv_item_username"
            style="@style/UserName"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_dot_left"
            app:layout_constraintEnd_toStartOf="@id/tv_dot_right"
            android:textSize="12sp"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tv_dot_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tv_item_username"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_username"
            app:layout_constraintStart_toEndOf="@id/tv_item_username"
            android:layout_gravity="center_vertical"
            android:text="@string/dot" />

        <ImageView
            android:id="@+id/img_ic_repository"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_item_repositories"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_repositories"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_repository"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_item_username"
            app:layout_constraintStart_toEndOf="@id/img_ic_repository"
            android:textSize="10sp"
            style="@style/Link"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/repositories"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/img_ic_web"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/tv_item_url"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_url"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_web"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_item_repositories"
            app:layout_constraintBottom_toTopOf="@id/horizontalRule"
            app:layout_constraintStart_toEndOf="@id/img_ic_web"
            android:textSize="10sp"
            style="@style/Link"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/url"
            tools:ignore="SmallSp" />

        <View
            android:id="@+id/horizontalRule"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_url"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="4dp"
            android:background="@color/blue_700" />
</androidx.constraintlayout.widget.ConstraintLayout>